Add sports pictos

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 1004w">
+            <img src="images/sports/biathlon.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Biathlon</a>
@@ -47,7 +47,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 1004w">
+            <img src="images/sports/curling.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Curling</a>
@@ -57,17 +57,17 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 1004w">
+            <img src="images/sports/ski-freestyle.png">
           </div>
           <div class="col-md-9">
-            <a class="links_sports" href="#">Ski Freestyle</a>
+            <a class="links_sports" href="#">Ski acrobatique</a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 1004w">
+            <img src="images/sports/bobsleigh.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Bobsleigh</a>
@@ -77,7 +77,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 1004w">
+            <img src="images/sports/luge.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Luge</a>
@@ -87,7 +87,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 1004w">
+            <img src="images/sports/combine-nordique.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Combiné nordique</a>
@@ -97,7 +97,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 1004w">
+            <img src="images/sports/hockey-sur-glace.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Hockey sur glace</a>
@@ -107,7 +107,7 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 1004w">
+            <img src="images/sports/patinage-artistique.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Patinage artistique</a>
@@ -117,18 +117,73 @@ layout: default
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 1004w">
+            <img src="images/sports/ski-alpin.png">
           </div>
           <div class="col-md-9">
             <a class="links_sports" href="#">Ski alpin</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="pictos row">
-      
-    </div>
-    <div class="pictos row">
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/saut-a-ski.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Saut à ski</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/ski-de-fond.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Ski de fond</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/short-track.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Patinage de vitesse sur piste courte</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/patinage-vitesse.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Patinage de vitesse</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/snowboard.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Surf des neiges</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="pictos-grp row">
+          <div class="col-md-3">
+            <img src="images/sports/skeleton.png">
+          </div>
+          <div class="col-md-9">
+            <a class="links_sports" href="#">Skeleton</a>
+          </div>
+        </div>
+      </div>
     </div>
     <p class="about_the_yog_p descr_pictos"><a href="#" class="link_site">Découvrez les sites de compétition ici</a>
     </p>
