--- a/index.html
+++ b/index.html
@@ -116,33 +116,54 @@ layout: default
   </div>
 </div>
 <div class="facts">
-  <div class="facts_wrap container">
-    <div class="row">
-      <div class="col-facts col-facts_1 col-md-3">
+  <div class="container">
+    <div class="row seven-cols">
+      <div class="col-md-1">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">240</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" src="images/medal.svg" width="100">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">Medals</h1>
         </div>
       </div>
-      <div class="col-facts col-md-3">
+      <div class="col-md-1">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">2365</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" src="images/basketball-jersey.svg" width="100">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/maillot_white.png" srcset="images/facts/maillot_white-p-500x500.png 500w, images/facts/maillot_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">Athletes</h1>
         </div>
       </div>
-      <div class="col-facts col-facts_1 col-md-3">
+      <div class="col-md-1">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">3rd</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" src="images/shapes.svg" width="100">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/boule_neige_white.png" srcset="images/facts/boule_neige_white-p-500x500.png 500w, images/facts/boule_neige_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">Winter Games</h1>
         </div>
       </div>
-      <div class="col-facts col-md-3">
+      <div class="col-md-1">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">206</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" src="images/earth-globe.svg" width="100">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/globe_white.png" srcset="images/facts/globe_white-p-500x500.png 500w, images/facts/globe_white-p-800x800.png 800w" width="130">
+          <h1 class="h2_facts" data-ix="fadeintop">Countries</h1>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <div class="wrap_facts">
+          <h1 class="h1_facts" data-ix="fadeindown">206</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/globe_white.png" srcset="images/facts/globe_white-p-500x500.png 500w, images/facts/globe_white-p-800x800.png 800w" width="130">
+          <h1 class="h2_facts" data-ix="fadeintop">Countries</h1>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <div class="wrap_facts">
+          <h1 class="h1_facts" data-ix="fadeindown">206</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/globe_white.png" srcset="images/facts/globe_white-p-500x500.png 500w, images/facts/globe_white-p-800x800.png 800w" width="130">
+          <h1 class="h2_facts" data-ix="fadeintop">Countries</h1>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <div class="wrap_facts">
+          <h1 class="h1_facts" data-ix="fadeindown">206</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/globe_white.png" srcset="images/facts/globe_white-p-500x500.png 500w, images/facts/globe_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">Countries</h1>
         </div>
       </div>
