CIO partners template on home page

--- a/index.html
+++ b/index.html
@@ -171,97 +171,46 @@ layout: default
   </div>
 </div>
 <div class="cio-sponsors container">
+  <img src="images/cio-partners/logo_olympic.png" alt="olympic">
   <ul class="sponsors-list first">
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Coca-Cola/Coca-Cola_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Coca-Cola">
-      </picture>
+      <img src="images/cio-partners/Coca-Cola_logo.jpg" alt="Coca-Cola">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Alibaba/alibaba-logo-01.png?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Alibaba Group">
-      </picture>
+      <img src="images/cio-partners/alibaba-logo-01.png" alt="Alibaba Group">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Atos/Atos_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Atos">
-      </picture>
+      <img src="images/cio-partners/Atos_logo.jpg" alt="Atos">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Bridgestone/Bridgestone_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Bridgestone">
-      </picture>
+      <img src="images/cio-partners/Bridgestone_logo.jpg" alt="Bridgestone">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Dow/Dow_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Dow">
-      </picture>
+      <img src="images/cio-partners/Dow_logo.jpg" alt="Dow">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Ge/GE_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="GE">
-      </picture>
+      <img src="images/cio-partners/GE_logo.jpg" alt="GE">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Mcdonalds/Mcdonalds_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="McDonald's">
-      </picture>
+      <img src="images/cio-partners/Mcdonalds_logo.jpg" alt="McDonald's">
     </li>
     <li>
-      <picture>
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-        <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-        <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Omega/Omega_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Omega">
-      </picture>
-      </li>
-      <li>
-        <picture>
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-          <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Panasonic/Panasonic_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Panasonic">
-        </picture>
-      </li>
-      <li>
-        <picture>
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-          <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Pg/PG_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="PG">
-        </picture>
-      </li>
-      <li>
-        <picture>
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-          <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Samsung/Samsung_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Samsung">
-        </picture>
-      </li>
-      <li>
-        <picture>
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-          <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Toyota/Toyota_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Toyota">
-        </picture>
-      </li>
-      <li>
-        <picture>
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 1024px)">
-          <source srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" media="(min-width: 768px)">
-          <img srcset="https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=130:70, https://stillmed.olympic.org/media/Images/OlympicOrg/IOC/How_We_Do_It/Sponsors/Visa/Visa_logo.jpg?interpolation=lanczos-none&amp;resize=260:140 2x" alt="Visa">
-        </picture>
-      </li>
-    </ul>
+      <img src="images/cio-partners/Omega_logo.jpg" alt="Omega">
+    </li>
+    <li>
+      <img src="images/cio-partners/Panasonic_logo.jpg" alt="Panasonic">
+    </li>
+    <li>
+      <img src="images/cio-partners/PG_logo.jpg" alt="PG">
+    </li>
+    <li>
+      <img src="images/cio-partners/Samsung_logo.jpg" alt="Samsung">
+    </li>
+    <li>
+      <img src="images/cio-partners/Toyota_logo.jpg" alt="Toyota">
+    </li>
+    <li>
+      <img src="images/cio-partners/Visa_logo.jpg" alt="Visa">
+    </li>
+  </ul>
 </div>
